kubernetes/hardhat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tripchain-hardhat-service
  labels:
    app: tripchain-hardhat
spec:
  selector:
    app: tripchain-hardhat
  ports:
    - protocol: TCP
      port: 8545
      targetPort: 8545
  type: ClusterIP
