kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tripchain-redis-service
  labels:
    app: tripchain-redis
spec:
  selector:
    app: tripchain-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
